--- a/config.json
+++ b/config.json
@@ -2,15 +2,15 @@
 	"Prefijo": ".",
 	"MultiIdioma": [true, ""],
 	"Propietario": [
-	["51991378809", "Matt_M", false],
-	["51995386439", "N3K0SM1C", true]
+	["51932178887", "є๔ร๏ภ ร๏t๏", false],
+	["51932178887", "є๔ร๏ภ ร๏t๏", true]
 	],
 	"LocPref": "51",
-	"NombreDelBot": "🅀🅄🄰🄽🅃🅄🄼-🄱🄾🅃",
+	"NombreDelBot": "є๔ร๏ภ ร๏t๏-🄱🄾🅃",
 	"MinimoDeUsuarios": 3,
 	"Limits": {"gms": 10, "dls": 20, "rdn": 30},
 	"DBtype": "json",
 	"FakeList": ["20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30", "31", "32", "33", "34", "35", "36", "37", "38", "39", "40", "41", "42", "43", "44", "45", "46", "47", "48", "49", "60", "61", "62", "63", "64", "65", "66", "67", "68", "69", "7", "80", "81", "82", "83", "84", "85", "86", "87", "88", "89", "90", "91", "92", "93", "94", "95", "96", "97", "98", "99"],
 	"GrupoWa": "",
-	"recursion": false
+	"recursion": true
 }
